salesforce-main/src/main/default/objects/Campus__c/Campus__c.object-meta.xml
<CustomObject>
    <description>List of BPP campus&apos;</description>
    <label>Campus</label>
    <nameField>
        <label>Athena Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>