salesforce-main/src/main/default/objects/Campus__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>Campus Address to populate event templates</description>
    <label>Address 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>