salesforce-main/src/main/default/objects/Campus__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>REMOVE Address</label>
    <type>TextArea</type>
</CustomField>