salesforce-main/src/main/default/objects/Campus__c/fields/Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>Campus_Code__c</fullName>
    <description>Not used as of 6/13/2011</description>
    <label>Campus Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>