salesforce-main/src/main/default/objects/Campus__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Campus Address to populate event templates</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>