salesforce-main/src/main/default/objects/Campus__c/fields/Directions__c.field-meta.xml
<CustomField>
    <fullName>Directions__c</fullName>
    <description>Not used as of 6/13/11</description>
    <label>Directions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>