salesforce-main/src/main/default/objects/Campus__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Displays Campus Name on records and event campaign templates</description>
    <label>Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>