salesforce-main/src/main/default/objects/Campus__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>Used to display address fields with line breaks on records if required</description>
    <formula>Address_1__c  &amp; BR() &amp;
Address_2__c  &amp; BR() &amp;
Address_3__c &amp; BR() 
&amp; City__c  &amp; &quot; &quot; &amp;  Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>