salesforce-main/src/main/default/objects/Campus__c/fields/Google_Maps__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps__c</fullName>
    <description>Enter link for google map- used to populate email templates.</description>
    <label>Google Maps</label>
    <type>Url</type>
</CustomField>