salesforce-main/src/main/default/objects/Campus__c/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <description>Enter link for map</description>
    <label>Map Link</label>
    <type>Url</type>
</CustomField>