salesforce-main/src/main/default/objects/Campus__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Campus Address to populate event templates</description>
    <label>Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>