salesforce-main/src/main/default/objects/Campus__c/fields/University_Name__c.field-meta.xml
<CustomField>
    <fullName>University_Name__c</fullName>
    <description>Name of university as it applies to the address</description>
    <label>University Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>